remove preview option to allow release